[package]
name = "e-hanoi-game"
version = "0.1.0"
authors = ["Lastronauts <lastronauts@outlook.jp>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bevy = "0.6.1"
dotenv = "0.15.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
